--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page Not Found | Sai Keshav</title>
-  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="mediaqueries.css" />
+  <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/mediaqueries.css" />
   <meta name="description" content="Page not found - The page you're looking for may have been moved or no longer exists.">
 </head>
 
@@ -66,7 +66,7 @@
     <p>Made with ☕ + 🎧 by Sai Keshav</p>
   </footer>
   <script src="https://kit.fontawesome.com/61b2fd30b0.js" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
